@@ -1,2 +1,5 @@
 # NaUKMA-Graphic
-It`s project for NaUKMA
+Its project for NaUKMA
+
+VM options:
+`--module-path "/home/programistich/utils/javafx-sdk-16/lib" --add-modules=javafx.fxml --add-modules=javafx.controls`
